--- a/code/finalcode.ipynb
+++ b/code/finalcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,27 +207,27 @@
     "\n",
     "svm_model = SVC(random_state= 202300698)\n",
     "svm_model.fit(X_train, y_train)\n",
-    "svm_y_pred = svm_model.predict(X_val)\n",
+    "svmgrid_y_pred = svm_model.predict(X_val)\n",
     "\n",
     "# 성능 평가\n",
-    "svm_accuracy = accuracy_score(y_val, svm_y_pred)\n",
-    "svm_precision = precision_score(y_val, svm_y_pred)\n",
-    "svm_recall = recall_score(y_val, svm_y_pred)\n",
-    "svm_f1_score = f1_score(y_val, svm_y_pred)\n",
-    "svm_conf_matrix = confusion_matrix(y_val, svm_y_pred)\n",
+    "svmgrid_accuracy = accuracy_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_precision = precision_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_recall = recall_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_f1_score = f1_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_conf_matrix = confusion_matrix(y_val, svmgrid_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
     "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
-    "print(svm_conf_matrix)\n",
-    "print(f'Accuracy: {svm_accuracy:.4f}')\n",
-    "print(f'Precision: {svm_precision:.4f}')\n",
-    "print(f'Recall: {svm_recall:.4f}')\n",
-    "print(f'F1 Score: {svm_f1_score:.4f}')"
+    "print(svmgrid_conf_matrix)\n",
+    "print(f'Accuracy: {svmgrid_accuracy:.4f}')\n",
+    "print(f'Precision: {svmgrid_precision:.4f}')\n",
+    "print(f'Recall: {svmgrid_recall:.4f}')\n",
+    "print(f'F1 Score: {svmgrid_f1_score:.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +354,10 @@
     "                f'Accuracy: {dt_accuracy:.4f}\\nPrecision: {dt_precision:.4f}\\nRecall: {dt_recall:.4f}\\nF1 Score: {dt_f1_score:.4f}',\n",
     "                  ha='center', va='center', transform=axes[0, 0].transAxes, fontsize=12, color='black')\n",
     "# SVM 혼동행렬\n",
-    "sns.heatmap(svm_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[0, 1], cbar=False)\n",
+    "sns.heatmap(svmgrid_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[0, 1], cbar=False)\n",
     "axes[0, 1].set_title(\"SVM\")\n",
     "axes[0, 1].text(0.5, -0.2,\n",
-    "                f'Accuracy: {svm_accuracy:.4f}\\nPrecision: {svm_precision:.4f}\\nRecall: {svm_recall:.4f}\\nF1 Score: {svm_f1_score:.4f}',\n",
+    "                f'Accuracy: {svmgrid_accuracy:.4f}\\nPrecision: {svmgrid_precision:.4f}\\nRecall: {svmgrid_recall:.4f}\\nF1 Score: {svmgrid_f1_score:.4f}',\n",
     "                  ha='center', va='center', transform=axes[0, 1].transAxes, fontsize=12, color='black')\n",
     "# Random Forest 혼동행렬\n",
     "sns.heatmap(rf_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[1, 0], cbar=False)\n",
@@ -382,12 +382,14 @@
    "source": [
     "성능 비교 그래프 만들기\n",
     "========================\n",
-    "> 참고: https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html"
+    "> 참고: https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html\n",
+    ">> 참고2: https://seanpark11.tistory.com/m/115\n",
+    ">>> 참고3: https://tnqkrdmssjan.tistory.com/57"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,22 +405,24 @@
    ],
    "source": [
     "models = ['Decision Tree', 'Support Vector Machine', 'Random Forest', 'Logisitc Regression']\n",
-    "accuracy_graph = [dt_accuracy, svm_accuracy, rf_accuracy, lr_accuracy]\n",
-    "precision_graph = [dt_precision, svm_precision, rf_precision, lr_precision]\n",
-    "recall_graph = [dt_recall, svm_recall, rf_recall, lr_recall]\n",
-    "f1_score_graph = [dt_f1_score, svm_f1_score, rf_f1_score, lr_f1_score]\n",
+    "accuracy_graph = [dt_accuracy, svmgrid_accuracy, rf_accuracy, lr_accuracy]\n",
+    "precision_graph = [dt_precision, svmgrid_precision, rf_precision, lr_precision]\n",
+    "recall_graph = [dt_recall, svmgrid_recall, rf_recall, lr_recall]\n",
+    "f1_score_graph = [dt_f1_score, svmgrid_f1_score, rf_f1_score, lr_f1_score]\n",
     "\n",
     "x = np.arange(len(models))\n",
     "width = 0.2\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "rects1 = ax.bar(x - 1.5 * width, accuracy_graph, width, label='Accuracy')\n",
-    "rects2 = ax.bar(x - 0.5 * width, precision_graph, width, label='Precision')\n",
-    "rects3 = ax.bar(x + 0.5 * width, recall_graph, width, label='Recall')\n",
-    "rects4 = ax.bar(x + 1.5 * width, f1_score_graph, width, label='F1 Score')\n",
+    "bar1 = ax.bar(x - 1.5 * width, accuracy_graph, width, label='Accuracy')\n",
+    "bar2 = ax.bar(x - 0.5 * width, precision_graph, width, label='Precision')\n",
+    "bar3 = ax.bar(x + 0.5 * width, recall_graph, width, label='Recall')\n",
+    "bar4 = ax.bar(x + 1.5 * width, f1_score_graph, width, label='F1 Score')\n",
     "\n",
-    "# 그래프 레이블 및 제목 설정\n",
+    "# LLM 사용해 레이블 설정 도움 받았습니다.\n",
+    "\n",
+    "\n",
     "ax.set_xlabel('Models')\n",
     "ax.set_ylabel('Scores')\n",
     "ax.set_title('Comparison of Model Performance')\n",
@@ -426,7 +430,6 @@
     "ax.set_xticklabels(models)\n",
     "ax.legend()\n",
     "\n",
-    "# 그래프 보기 좋게 레이블과 값 표시\n",
     "def autolabel(rects):\n",
     "    for rect in rects:\n",
     "        height = rect.get_height()\n",
@@ -435,15 +438,117 @@
     "                    xytext=(0, 3),  # 텍스트를 막대 위로 약간 이동\n",
     "                    textcoords=\"offset points\",\n",
     "                    ha='center', va='bottom')\n",
-    "\n",
-    "# 레이블 추가\n",
-    "autolabel(rects1)\n",
-    "autolabel(rects2)\n",
-    "autolabel(rects3)\n",
-    "autolabel(rects4)\n",
+    "autolabel(bar1)\n",
+    "autolabel(bar2)\n",
+    "autolabel(bar3)\n",
+    "autolabel(bar4)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Support Vector Machine 성능 향상\n",
+    "===============================\n",
+    "> [#2] https://github.com/ripepersimmon/aiprogrammingtitanic/issues/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Support Vector Machine\"\n",
+      "Confusion Matrix:\n",
+      "[[97  6]\n",
+      " [59 17]]\n",
+      "Accuracy: 0.6369\n",
+      "Precision: 0.7391\n",
+      "Recall: 0.2237\n",
+      "F1 Score: 0.3434\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Support Vector Machine\n",
+    "\n",
+    "svm_model = SVC(random_state= 202300698)\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "svmgrid_y_pred = svm_model.predict(X_val)\n",
+    "\n",
+    "# 성능 평가\n",
+    "svmgrid_accuracy = accuracy_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_precision = precision_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_recall = recall_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_f1_score = f1_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_conf_matrix = confusion_matrix(y_val, svmgrid_y_pred)\n",
+    "\n",
+    "# 혼동 행렬\n",
+    "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
+    "print(svmgrid_conf_matrix)\n",
+    "print(f'Accuracy: {svmgrid_accuracy:.4f}')\n",
+    "print(f'Precision: {svmgrid_precision:.4f}')\n",
+    "print(f'Recall: {svmgrid_recall:.4f}')\n",
+    "print(f'F1 Score: {svmgrid_f1_score:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe_svc = Pipeline([('scl', StandardScaler()), ('clf', SVC(random_state= 202300698))])\n",
+    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
+    "param_grid = [\n",
+    "    {'clf__C' : param_range, 'clf__kernel': ['linear']},\n",
+    "    {'clf__C' : param_range, 'clf__gamma': param_range, 'clf__kernel': ['rbf']}\n",
+    "]\n",
+    "\n",
+    "svm_model_grid = GridSearchCV(estimator = pipe_svc, param_grid=param_grid,\n",
+    "                  scoring = 'accuracy', cv = 10, n_jobs = 5)\n",
+    "svm_model_grid = svm_model_grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svmgrid_y_pred = svm_model.predict(X_val)\n",
+    "\n",
+    "# 성능 평가\n",
+    "svmgrid_accuracy = accuracy_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_precision = precision_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_recall = recall_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_f1_score = f1_score(y_val, svmgrid_y_pred)\n",
+    "svmgrid_conf_matrix = confusion_matrix(y_val, svmgrid_y_pred)\n",
+    "\n",
+    "# 혼동 행렬\n",
+    "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
+    "print(svmgrid_conf_matrix)\n",
+    "print(f'Accuracy: {svmgrid_accuracy:.4f}')\n",
+    "print(f'Precision: {svmgrid_precision:.4f}')\n",
+    "print(f'Recall: {svmgrid_recall:.4f}')"
    ]
   }
  ],
