--- a/code/finalcode.ipynb
+++ b/code/finalcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,27 +207,27 @@
     "\n",
     "svm_model = SVC(random_state= 202300698)\n",
     "svm_model.fit(X_train, y_train)\n",
-    "svmgrid_y_pred = svm_model.predict(X_val)\n",
+    "svm_y_pred = svm_model.predict(X_val)\n",
     "\n",
     "# 성능 평가\n",
-    "svmgrid_accuracy = accuracy_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_precision = precision_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_recall = recall_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_f1_score = f1_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_conf_matrix = confusion_matrix(y_val, svmgrid_y_pred)\n",
+    "svm_accuracy = accuracy_score(y_val, svm_y_pred)\n",
+    "svm_precision = precision_score(y_val, svm_y_pred)\n",
+    "svm_recall = recall_score(y_val, svm_y_pred)\n",
+    "svm_f1_score = f1_score(y_val, svm_y_pred)\n",
+    "svm_conf_matrix = confusion_matrix(y_val, svm_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
     "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
-    "print(svmgrid_conf_matrix)\n",
-    "print(f'Accuracy: {svmgrid_accuracy:.4f}')\n",
-    "print(f'Precision: {svmgrid_precision:.4f}')\n",
-    "print(f'Recall: {svmgrid_recall:.4f}')\n",
-    "print(f'F1 Score: {svmgrid_f1_score:.4f}')"
+    "print(svm_conf_matrix)\n",
+    "print(f'Accuracy: {svm_accuracy:.4f}')\n",
+    "print(f'Precision: {svm_precision:.4f}')\n",
+    "print(f'Recall: {svm_recall:.4f}')\n",
+    "print(f'F1 Score: {svm_f1_score:.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +354,10 @@
     "                f'Accuracy: {dt_accuracy:.4f}\\nPrecision: {dt_precision:.4f}\\nRecall: {dt_recall:.4f}\\nF1 Score: {dt_f1_score:.4f}',\n",
     "                  ha='center', va='center', transform=axes[0, 0].transAxes, fontsize=12, color='black')\n",
     "# SVM 혼동행렬\n",
-    "sns.heatmap(svmgrid_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[0, 1], cbar=False)\n",
+    "sns.heatmap(svm_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[0, 1], cbar=False)\n",
     "axes[0, 1].set_title(\"SVM\")\n",
     "axes[0, 1].text(0.5, -0.2,\n",
-    "                f'Accuracy: {svmgrid_accuracy:.4f}\\nPrecision: {svmgrid_precision:.4f}\\nRecall: {svmgrid_recall:.4f}\\nF1 Score: {svmgrid_f1_score:.4f}',\n",
+    "                f'Accuracy: {svm_accuracy:.4f}\\nPrecision: {svm_precision:.4f}\\nRecall: {svm_recall:.4f}\\nF1 Score: {svm_f1_score:.4f}',\n",
     "                  ha='center', va='center', transform=axes[0, 1].transAxes, fontsize=12, color='black')\n",
     "# Random Forest 혼동행렬\n",
     "sns.heatmap(rf_conf_matrix, annot=True, fmt='d', cmap='Blues', ax=axes[1, 0], cbar=False)\n",
@@ -405,10 +405,10 @@
    ],
    "source": [
     "models = ['Decision Tree', 'Support Vector Machine', 'Random Forest', 'Logisitc Regression']\n",
-    "accuracy_graph = [dt_accuracy, svmgrid_accuracy, rf_accuracy, lr_accuracy]\n",
-    "precision_graph = [dt_precision, svmgrid_precision, rf_precision, lr_precision]\n",
-    "recall_graph = [dt_recall, svmgrid_recall, rf_recall, lr_recall]\n",
-    "f1_score_graph = [dt_f1_score, svmgrid_f1_score, rf_f1_score, lr_f1_score]\n",
+    "accuracy_graph = [dt_accuracy, svm_accuracy, rf_accuracy, lr_accuracy]\n",
+    "precision_graph = [dt_precision, svm_precision, rf_precision, lr_precision]\n",
+    "recall_graph = [dt_recall, svm_recall, rf_recall, lr_recall]\n",
+    "f1_score_graph = [dt_f1_score, svm_f1_score, rf_f1_score, lr_f1_score]\n",
     "\n",
     "x = np.arange(len(models))\n",
     "width = 0.2\n",
@@ -476,32 +476,11 @@
      ]
     }
    ],
-   "source": [
-    "##Support Vector Machine\n",
-    "\n",
-    "svm_model = SVC(random_state= 202300698)\n",
-    "svm_model.fit(X_train, y_train)\n",
-    "svmgrid_y_pred = svm_model.predict(X_val)\n",
-    "\n",
-    "# 성능 평가\n",
-    "svmgrid_accuracy = accuracy_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_precision = precision_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_recall = recall_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_f1_score = f1_score(y_val, svmgrid_y_pred)\n",
-    "svmgrid_conf_matrix = confusion_matrix(y_val, svmgrid_y_pred)\n",
-    "\n",
-    "# 혼동 행렬\n",
-    "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
-    "print(svmgrid_conf_matrix)\n",
-    "print(f'Accuracy: {svmgrid_accuracy:.4f}')\n",
-    "print(f'Precision: {svmgrid_precision:.4f}')\n",
-    "print(f'Recall: {svmgrid_recall:.4f}')\n",
-    "print(f'F1 Score: {svmgrid_f1_score:.4f}')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
